src/test/deca/context/valid/objet/subclass_cont_01.deca
// Description:
//    Programme minimaliste testant la déclaration de sous classes .
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

class A{

}

class B extends A {}

{
    A a = new B();
}
